# kloros

./: .editorconfig  .gitattributes  .gitconfig  .gitignore  .pre-commit-config.yaml  ALIGNMENT_VERIFICATION_REPORT.md  AUDIT.md  AUDIT_QUICK_INDEX.md  AUDIT_SUMMARY.md  AUTONOMOUS_DECAY_GUIDE.md  AUTONOMOUS_REMEDIATION_COMPLETE.md  AUTONOMY_LEVEL_3_ENABLED.md  BASAL_GANGLIA_PHASE1_REVIEW.md  BASAL_GANGLIA_REVIEW_INDEX.md  BASAL_GANGLIA_TECHNICAL_SUMMARY.md  BRACKET_TOURNAMENT_IMPLEMENTATION.md  BRACKET_TOURNAMENT_MEMORY_ISSUE.md  BRACKET_TOURNAMENT_PRODUCTION_RESULTS.md  BRACKET_TOURNAMENT_TEST_RESULTS.md  BUG_FIX_VERIFICATION_REPORT_curiosity_intent_routing.txt  C2C_COMPLETE_SUMMARY.md  CHANGELOG.md  CHANGELOG_v2.2.md  CHAOS_EMERGENCY_QUEUE_ANALYSIS.md  CHAOS_MONITOR_DISABLED_SYSTEM_FILTER.md  CHROMADB_INTEGRATION_COMPLETE.md  CLAUDE.md  CLAUDE_C2C_AUTORUN_DOCS.md  CLAUDE_C2C_USAGE.md  CLAUDE_CAPABILITY_ANALYSIS.md  COMPONENT_ARCHITECTURE.md  COMPREHENSIVE_TEST_REPORT.md  CONFIDENCE_SCORES_FIX.md  CONSCIOUSNESS_EXPLORATION.md  CONSCIOUSNESS_INTEGRATION_COMPLETE.md  CONSCIUM_COMPARISON.md  CONVERSATION_CONTEXT_DIAGNOSTIC.md  CONVERSATION_FIXES_APPLIED.md  CURIOSITY_ACTION_STATUS.md  D-REAM_TRUE_SYSTEM_GUIDE.md  (+116 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
D-REAM_BUNDLE/: MANIFEST.md
KLoROS/: kloros_memory.json  models
config/: appraisal_weights.yaml  checksums.json  coder_prompts.toml  policy.toml  tools.yaml
configs/: kloros_memory.json
dashboard/: README.md
data/: embeddings.npy  faiss.index  glados_id2row.pkl  metadata.json  metadata.parquet
diagnostics/: MASTER_DIAGNOSTIC_REPORT.md  analyze_memory_db.py  audit_tool_registry.py  error_pattern_analysis.md  memory_health_report.md  rag_test_results.json  test_command_processing.py  test_context_retrieval.py  test_rag_performance.py  usage_patterns_report.md  voice_pipeline_analysis.md
docs/: ACTIVE_REASONING.md  ADAPTIVE_SEARCH_SPACE_DESIGN.md  ALLEN_INSTITUTE_INTEGRATION.md  ASTRAEA_SYSTEM_THESIS.md  (+63 more)
(+4321 files in other folders)
