[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kloros"
version = "0.0.0"
description = "KLoROS — local voice assistant glue code"
readme = "README.md"
authors = [ { name = "KLoROS Dev" } ]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy==2.3.3",
    "requests==2.32.5",
    "sounddevice==0.5.2",
    "vosk==0.3.45",
    "webrtcvad==2.0.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
namespace_packages = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["sounddevice", "vosk", "_webrtcvad", "jellyfish", "piper", "yaml", "rzero.evaluator", "rzero.gatekeeper", "rzero.proposer", "faiss", "sentence_transformers"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"




