[metadata]
name = kloros
version = 0.0.0
description = KLoROS — local voice assistant glue code
long_description = file: README.md
author = KLoROS Dev
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy==2.3.3
    requests==2.32.5
    sounddevice==0.5.2
    vosk==0.3.45
    webrtcvad==2.0.10

[options.packages.find]
where = src
